# minced

./: Cargo.toml  README.md
examples/: minced.txt  parse_file.rs
src/: lib.rs
