[package]
name = "minced"
authors = ["Jim Rybarski <jim@rybarski.com>"]
description = "A parser for the output of the MinCED CRISPR array annotation tool"
readme = "README.md"
homepage = "https://github.com/jimrybarski/minced"
repository = "https://github.com/jimrybarski/minced"
license = "MIT"
keywords = ["minced", "CRISPR", "bioinformatics"]
categories = ["parsing", "science"]
version = "1.0.0"
edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
nom = "7.1.3"
